[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/visitor1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameInfo.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GameInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -287.0
margin_top = -25.0
margin_right = 291.0
custom_colors/font_color = Color( 0.6, 0.458824, 0.466667, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="TrainStartTimer" type="Timer" parent="."]

[node name="TrainRestingTimer" type="Timer" parent="."]

[node name="ShowTilesToRest" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TrainStartTimer" to="." method="_on_TrainStartTimer_timeout"]
[connection signal="timeout" from="TrainRestingTimer" to="." method="_on_TrainRestingTimer_timeout"]
[connection signal="timeout" from="ShowTilesToRest" to="." method="_on_ShowTilesToRest_timeout"]
